concourse-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: concourse-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ci.kops-k8s.de
    http:
      paths:
      - path: /
        backend:
          serviceName: brazen-abalone-web
          servicePort: 8080
