fun-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fun-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: deploy-image1
          servicePort: 3000
